<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <Button style="@style/Button.Green.Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_exercise"
        android:onClick="viewAllWorkoutPlans"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button5"
        android:textSize="25dp" />

    <Button style="@style/Button.Statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_statistics"
        android:id="@+id/button"
        android:layout_above="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:onClick="viewStatistics"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@drawable/img_main"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_main"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#61add9"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"/>


</RelativeLayout>
